fixed the tip view collaps tabs button width

--- a/css/app.css
+++ b/css/app.css
@@ -433,6 +433,13 @@ html, body {
 	max-width: 200px;
 }
 
+#tips .title{
+	margin: 0px;
+	padding: 0px;
+	text-align: left;
+	width:100%;
+}
+
 #tipTitle {
 	color: #fff;
 	font-size: 30px;
